<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="Build My Pizza"
        android:textSize="30dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/sauce_toggle"
        android:layout_toStartOf="@+id/sauce_toggle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_button"
        android:id="@+id/button"
        android:onClick="findPizza"
        android:layout_below="@+id/switch1"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizzaText"
        android:id="@+id/pizza_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="White"
        android:textOn="Red"
        android:id="@+id/sauce_toggle"
        android:layout_below="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/size"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/checkBox2"
        android:layout_alignEnd="@+id/checkBox2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/name_edit"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni_check"
        android:id="@+id/checkBox1"
        android:layout_below="@+id/linearLayout"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sauce_toggle"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/spinner"
            android:id="@+id/crust"
            android:weightSum="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thin"
                android:id="@+id/radioButton1"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thick"
                android:id="@+id/radioButton2" />

        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crust_type"
            android:id="@+id/typeCrust"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mushrooms_check"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/linearLayout"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onions_check"
        android:id="@+id/checkBox3"
        android:layout_alignTop="@+id/checkBox4"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sausage_check"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox1"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_alignStart="@+id/checkBox1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gluten_switch"
        android:id="@+id/switch1"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_alignStart="@+id/checkBox4" />

</RelativeLayout>
